--- a/portifolio-react/package.json
+++ b/portifolio-react/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-simple-typewriter": "^5.0.1",
+    "typewriter": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
