--- a/portifolio-react/package.json
+++ b/portifolio-react/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-simple-typewriter": "^5.0.1",
+    "swiper": "^11.1.4",
     "typewriter": "^9.2.0"
   },
   "devDependencies": {
