--- a/portifolio-react/package.json
+++ b/portifolio-react/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "portifolio-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emailjs/browser": "^4.3.3",
-    "emailjs-com": "^3.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-simple-typewriter": "^5.0.1",
-    "swiper": "^11.1.4",
-    "typewriter": "^9.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
-  }
+    "homepage": "https://samuxka.github.io/treinarReact",
+    "name": "portifolio-react",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "preedeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "@emailjs/browser": "^4.3.3",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^6.24.0",
+        "react-simple-typewriter": "^5.0.1",
+        "swiper": "^11.1.4"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^4.0.0",
+        "gh-pages": "^6.1.1",
+        "vite": "^4.0.0"
+    }
 }
